[tool.poetry]
name = "login"
version = "0.1.0"
description = ""
authors = ["azusaanson"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Werkzeug = "^2.0.1"
Flask-WTF = "^0.15.1"
WTForms = "^2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
